Repositorio y server básico preparado
