# swagger-output.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Azafran API",
-    "description": "Recipes App",
+    "title": "Polls API",
+    "description": "Polls App",
     "version": "1.0.0"
   },
   "host": "localhost:8080",
@@ -65,12 +65,6 @@
                 },
                 "password": {
                   "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "country": {
-                  "example": "any"
                 }
               }
             }
@@ -86,11 +80,8 @@
         }
       }
     },
-    "/ingredients/": {
+    "/polls/": {
       "get": {
-        "tags": [
-          "Ingredients"
-        ],
         "description": "",
         "parameters": [
           {
@@ -109,9 +100,6 @@
         }
       },
       "post": {
-        "tags": [
-          "Ingredients"
-        ],
         "description": "",
         "parameters": [
           {
@@ -126,16 +114,10 @@
           },
           "401": {
             "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Ingredients"
-        ],
         "description": "",
         "parameters": [
           {
@@ -149,10 +131,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "quantity": {
+                "pollId": {
                   "example": "any"
                 }
               }
@@ -169,53 +148,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "Ingredients"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/recipes/": {
-      "get": {
-        "tags": [
-          "Recipes"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Recipes"
-        ],
         "description": "",
         "parameters": [
           {
@@ -229,7 +161,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "ingredients": {
+                "pollId": {
                   "example": "any"
                 }
               }
